Implementirana baza i logika